fix: find multiple best routes